# Ren2Switch

./: CMakeLists.txt  README.md  build.bash  link_sources.bash  renpy.patch  setup.bash
.github/workflows/: main.yml
sources/: main.c
switch/: CMakeLists.txt
switch/source/: main.c
